dev-argocd/app-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-dev
  namespace: app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-dev
  template:
    metadata:
      labels:
        app: app-dev
        terraform: "false"
    spec:
      # imagePullSecrets:
      # - name: regcred
      containers:
      - name: cloudd-dashboard-api
        image: cr.yandex/crp7cn95sroaqove1rcr/cloudd-dashboard-api:v0.2-14-g25f6d8a
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 8081 # informational
