dev-argocd/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-dev-svc
  namespace: app-dev
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app-dev
  type: ClusterIP
