dev-argocd/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-dev-ingress
  namespace: app-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app-test.klimdos.cf
    http:
      paths:
      - backend:
          serviceName: app-dev-svc
          servicePort: 80
       #path: /
